--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<html>
-  wip
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset='utf-8'>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="js/app.js"></script>
+    <script>devils_grip.core.main();</script>
+  </body>
 </html>
